src/test/ui/hygiene/impl_items.stderr
error: type `[fn item {foo::S::f}: for<'r> fn(&'r foo::S)]` is private
  --> $DIR/impl_items.rs:12:23
   |
LL |         let _: () = S.f();
   |                       ^ private type
...
LL |     foo::m!();
   |     --------- in this macro invocation
   |
   = note: this error originates in the macro `foo::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

